@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: namespace.test,v 1.18 2001/11/23 01:26:27 das Exp $
+# RCS: @(#) $Id: namespace.test,v 1.19 2001/11/29 18:14:44 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -1136,8 +1136,8 @@ test namespace-40.1 {Ignoring namespace proc "unknown"} {
     set l
 } {global global}
 
-test namespace-41.1 {Shadowing byte-compiled commands} {
-	set res {}
+test namespace-41.1 {Shadowing byte-compiled commands, Bug: 231259} {
+    set res {}
     namespace eval ns {
 	set res {}
 	proc test {} {
@@ -1152,6 +1152,23 @@ test namespace-41.1 {Shadowing byte-compiled commands} {
     namespace delete ns
     set res
 } {0 1}
+
+test namespace-41.2 {Shadowing byte-compiled commands, Bug: 231259} {
+    set res {}
+    namespace eval ns {
+	variable b 0
+    }
+
+    proc ns::a {i} {
+	variable b
+	proc set args {return "New proc is called"}
+	return [set b $i]
+    }
+    
+    set res [list [ns::a 1] [ns::a 2] $ns::b]
+    namespace delete ns
+    set res
+} {1 {New proc is called} 1}
 
 # cleanup
 catch {rename cmd1 {}}
